[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Morris Jobke <hey@morrisjobke.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day01-1"
path = "src/day01-1.rs"
[[bin]]
name = "day01-2"
path = "src/day01-2.rs"